Update versions Use tomee-maven-plugin