@@ -15,11 +15,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>boxdata</groupId>
     <artifactId>boxdata</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <packaging>war</packaging>
     <name>boxdata</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -29,11 +28,6 @@
         <scala.plugin.version>2.15.2</scala.plugin.version>
         <junit.version>4.10</junit.version>
     </properties>
-    <modules>
-        <module>boxdata-gui</module>
-        <module>boxdata-web</module>
-        <module>boxdata-resources</module>
-    </modules>
     <repositories>
         <repository>
             <id>apache.snapshots</id>
@@ -67,4 +61,91 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.openejb</groupId>
+            <artifactId>openejb-core</artifactId>
+        </dependency>
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.github.searls</groupId>
+                <artifactId>jasmine-maven-plugin</artifactId>
+                <version>1.2.0.0</version>
+                <extensions>true</extensions>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <preloadSources>
+                        <source>${project.basedir}/src/main/webapp/app/lib/ext-4.1.1a/ext-all-debug.js</source>
+                        <source>${project.basedir}/src/test/resources/start.js</source>
+                    </preloadSources>
+                    <jsSrcDir>${project.basedir}/src/main/webapp</jsSrcDir>
+                    <!-- We need to point to an empty directory, otherwise jasmine loads the test files before
+                    RequireJs finishes loading the requirements. The solution is to let RequireJs load
+                    the test files too. -->
+                    <jsTestSrcDir>${project.basedir}/src/test/javascript/empty</jsTestSrcDir>
+                    <sourceIncludes>
+                        <!-- Nothing to include. Require.js will load it for us -->
+                    </sourceIncludes>
+                    <customRunnerTemplate>src/test/resources/runner.html</customRunnerTemplate>
+                    <!-- We should skip the tests for now. -->
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.googlecode.jslint4java</groupId>
+                <artifactId>jslint4java-maven-plugin</artifactId>
+                <version>2.0.3</version>
+                <configuration>
+                    <failOnError>true</failOnError>
+                    <options>
+                        <vars>true</vars>
+                        <predef>Ext,boxdata,window,Highcharts</predef>
+                        <indent>4</indent>
+                    </options>
+                    <sourceFolders>
+                        <sourceFolder>${basedir}/src/main/webapp/app/js</sourceFolder>
+                    </sourceFolders>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.scala-tools</groupId>
+                <artifactId>maven-scala-plugin</artifactId>
+                <version>${scala.plugin.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>compile</goal>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.openejb.maven</groupId>
+                <artifactId>tomee-maven-plugin</artifactId>
+                <version>${tomee.version}</version>
+                <configuration>
+                    <tomeeClassifier>plus</tomeeClassifier>
+                    <args>-Xmx512m -XX:PermSize=256m</args>
+                    <context>boxdata</context>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
